...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // This view serves the purpose of both Add and Edit, based on the mode set.
        if isAddMode {
            navigationItem.title = "Add User"
        } else {
            navigationItem.title = "Edit User"
        }
        
        // Delegate for name field
        nameTextField.delegate = self
        dobTextField.delegate = self
        genderTextField.delegate = self
...
